--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>FLATDANGO</title>
-    <link rel="stylesheet" href="./main.css" />
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
     <!-- Heading -->
@@ -11,20 +11,20 @@
         <h2 class="ui header">
           <i class="orange ticket icon"></i>
           <div class="content">FLATDANGO</div>
-          <div id="subtitle">MOVIE TICKETS</div>
+          <div id="subtitle">Movie Theater</div>
         </h2>
       </div>
     </div>
     <div class="ui centered grid">
       <div class="four wide column">
         <div class="list-container">
-          <!-- list og movie to be appended here -->
+          <!-- list of movie to be appended here -->
           <ul class="ui divided list" id="films">
             <li class="film item"></li>
           </ul>
         </div>
       </div>
-      <!-- image -->
+      <!-- poster -->
       <div class="four wide column">
         <img
           id="poster"
@@ -57,6 +57,6 @@
         </div>
       </section>
     </div>
-    <script src="./script.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
